--- a/serverless.yml
+++ b/serverless.yml
@@ -19,5 +19,12 @@ functions:
     events:
       - httpApi: "*"
 
+custom:
+  dotenv:
+    exclude:
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - DATABASE_URL
+
 plugins:
   - serverless-offline
